Tue Jul 31 08:34:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection_doctest2.txt,secore/searchconnection.py,
	  secore/searchconnection_doctest3.txt: Improve test coverage - in
	  particular, add tests of various conditions which cause errors.

Mon Jul 30 16:10:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/datastructures.py,secore/datastructures_doctest1.txt:
	  Add test for terms which are too long, and note in the code about
	  why this restriction exists, and how it could be removed.

Mon Jul 30 14:29:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Update test for displaying a facet range.

Mon Jul 30 14:29:08 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Update documentation comment for
	  query_facet() method.

Mon Jul 30 12:38:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix bug with handling of facets of
	  type 'float'.

Fri Jul 27 02:04:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/fieldactions.py,secore/searchconnection.py: Add facet
	  searching.

Fri Jul 27 01:13:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: For facet selection - don't return
	  facets which only have 1 or 0 values.

Thu Jul 26 17:02:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/datastructures.py: Warn early if a field is too long:
	  we might be able to replace this by hashing if necessary, but
	  this is better than waiting for the xapian error in this case.

Wed Jul 25 08:37:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation on indexing and
	  searching facets.

Wed Jul 25 03:06:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Correct small initialisation bug.
